--- a/20.10.html
+++ b/20.10.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container-fluid"  style="margin-bottom: 20px;">
+    <div class="container"  style="margin-bottom: 20px;">
         <div class="cloud">
             <h2>Happy women's day 20/10</h2>
         </div>
